[package]
name = "history_survival_client"
version = "0.0.5"
authors = ["ajh123", "Technici4n", "Azercoco"]
edition = "2018"

[[bin]]
name = "history_survival_client"
path = "./src/main.rs"

[dependencies]
# Voxel-rs
history_survival_common = { path = "../common" }
history_survival_server = { path = "../server" }

# Utilities
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
ron = "0.6"
serde = "1.0"
toml = "0.5"
futures = "0.3"
crossbeam-channel = "0.5"

# Graphics
shaderc = "0.7"
image = "0.23"
texture_packer = "0.21"
wgpu = "0.6"
wgpu-types = "0.6"
winit = "0.24"

# Gui
quint = { path = "../quint" }
wgpu_glyph = "0.10"

# Math
nalgebra = "0.23"
