[package]
name = "history_survival_network"
version = "0.0.5"
authors = ["ajh123", "Technici4n", "Azercoco"]
edition = "2018"

[dependencies]
# Utilities
env_logger = "0.8"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8"
# Encoding
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc = "1.8"
bitvec = { version = "0.20", features = ["serde"] }
