[package]
name = "history_survival_server"
version = "0.0.5"
authors = ["ajh123", "Technici4n", "Azercoco"]
edition = "2018"

[dependencies]
# Voxel-rs
history_survival_common = { path = "../common" }

# Utilities
anyhow = "1.0"
env_logger = "0.8"
lazy_static = "1.4.0"
log = "0.4"

# Math
nalgebra = "0.23"
